compiler/testData/diagnostics/tests/sealed/RedundantAbstract.kt
<!REDUNDANT_MODIFIER!>abstract<!> sealed class Base {

}